--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "terraform-aws-exo-ts-code-build-task-runner",
   "scripts": {
-    "zip": "ts-node zip.ts"
+    "zip": "ts-node zip.ts",
+    "download-bridge-source": "ts-node download-bridge-source.ts"
   },
   "dependencies": {
-    "@types/node": "^17.0.6",
+    "@types/node": "^17.0.35",
     "@types/uuid": "^8.3.3",
     "cmdish": "^1.1.0",
+    "octokit-downloader": "^0.0.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
